# model/address.go
@@ -7,15 +7,15 @@ import (
 )
 
 type Address struct {
-	ID           uint           `json:"id" gorm:"primarykey"`
-	CreatedAt    time.Time      `json:"createdAt"`
-	UpdatedAt    time.Time      `json:"updatedAt"`
+	ID           uint           `json:"id,omitempty" gorm:"primarykey"`
+	CreatedAt    time.Time      `json:"createdAt,omitempty"`
+	UpdatedAt    time.Time      `json:"updatedAt,omitempty"`
 	DeletedAt    gorm.DeletedAt `json:"deletedAt,omitempty" gorm:"index"`
-	ZipCode      string         `json:"zipCode"`
-	Street       string         `json:"street"`
-	Number       string         `json:"number"`
-	Complement   string         `json:"complement"`
-	Neighborhood string         `json:"neighborhood"`
-	City         string         `json:"city"`
-	State        string         `json:"state"`
+	ZipCode      string         `json:"zipCode,omitempty"`
+	Street       string         `json:"street,omitempty"`
+	Number       string         `json:"number,omitempty"`
+	Complement   string         `json:"complement,omitempty"`
+	Neighborhood string         `json:"neighborhood,omitempty"`
+	City         string         `json:"city,omitempty"`
+	State        string         `json:"state,omitempty"`
 }
