# model/order.go
@@ -7,11 +7,11 @@ import (
 )
 
 type Order struct {
-	ID        uint           `json:"id" gorm:"primarykey"`
-	CreatedAt time.Time      `json:"createdAt"`
-	UpdatedAt time.Time      `json:"updatedAt"`
+	ID        uint           `json:"id,omitempty" gorm:"primarykey"`
+	CreatedAt time.Time      `json:"createdAt,omitempty"`
+	UpdatedAt time.Time      `json:"updatedAt,omitempty"`
 	DeletedAt gorm.DeletedAt `json:"deletedAt,omitempty" gorm:"index"`
-	Products  []Product      `json:"products" gorm:"many2many:order_products;"`
-	UserID    uint           `json:"userId"`
-	User      User           `json:"user" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
+	Products  []*Product     `json:"products,omitempty" gorm:"many2many:order_products;"`
+	UserID    uint           `json:"userId,omitempty"`
+	User      *User          `json:"user,omitempty" gorm:"constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 }
